--- a/Resturants/Cell/TagUserCell/TagUserTCell.xib
+++ b/Resturants/Cell/TagUserCell/TagUserTCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -68,19 +68,37 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="avu-81-mcS">
-                                <rect key="frame" x="290" y="22" width="24" height="22.666666666666671"/>
-                                <color key="tintColor" name="ColorWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="24" id="I2i-eg-iAq"/>
-                                    <constraint firstAttribute="height" constant="24" id="lhM-Je-EcC"/>
-                                </constraints>
-                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="DWi-Fb-HLE">
+                                <rect key="frame" x="221" y="17.666666666666671" width="93" height="31"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="avu-81-mcS">
+                                        <rect key="frame" x="0.0" y="0.99999999999999822" width="24" height="29.666666666666664"/>
+                                        <color key="tintColor" name="ColorWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="24" id="I2i-eg-iAq"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Xd-sX-Qbj">
+                                        <rect key="frame" x="26" y="0.0" width="67" height="31"/>
+                                        <color key="backgroundColor" name="ColorYellow"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Follow">
+                                            <fontDescription key="titleFontDescription" name="Inter-Regular_Medium" family="Inter" pointSize="14"/>
+                                            <color key="baseForegroundColor" name="ColorBlack"/>
+                                        </buttonConfiguration>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="6"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.10980392156862745" green="0.10980392156862745" blue="0.10980392156862745" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="avu-81-mcS" secondAttribute="trailing" constant="6" id="Yfr-lw-4tB"/>
-                            <constraint firstItem="avu-81-mcS" firstAttribute="centerY" secondItem="y4e-lD-Dan" secondAttribute="centerY" id="eqH-vW-j4N"/>
+                            <constraint firstItem="DWi-Fb-HLE" firstAttribute="centerY" secondItem="y4e-lD-Dan" secondAttribute="centerY" id="JnJ-3e-Dfg"/>
+                            <constraint firstAttribute="trailing" secondItem="DWi-Fb-HLE" secondAttribute="trailing" constant="6" id="P83-pP-62M"/>
                             <constraint firstItem="oA8-QG-iCt" firstAttribute="leading" secondItem="lXV-7E-PRU" secondAttribute="trailing" constant="6" id="fuQ-QV-Wgd"/>
                             <constraint firstItem="oA8-QG-iCt" firstAttribute="centerY" secondItem="y4e-lD-Dan" secondAttribute="centerY" id="p6x-Rf-jhd"/>
                             <constraint firstItem="lXV-7E-PRU" firstAttribute="centerY" secondItem="y4e-lD-Dan" secondAttribute="centerY" id="x76-Xd-oOd"/>
@@ -99,6 +117,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
+                <outlet property="btnFollow" destination="9Xd-sX-Qbj" id="F6a-9a-x6T"/>
                 <outlet property="img" destination="lXV-7E-PRU" id="idX-dT-eyZ"/>
                 <outlet property="imgSelected" destination="avu-81-mcS" id="xtB-N2-9wG"/>
                 <outlet property="lblFollowers" destination="ZTh-vo-bED" id="fWe-4V-u73"/>
@@ -111,8 +130,14 @@
     <resources>
         <image name="circle.fill" catalog="system" width="128" height="123"/>
         <image name="person.circle.fill" catalog="system" width="128" height="123"/>
+        <namedColor name="ColorBlack">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="ColorWhite">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="ColorYellow">
+            <color red="0.80392156862745101" green="0.86274509803921573" blue="0.22352941176470587" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="tintColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
