--- a/Resturants/Cell/TagUserCell/TagUserTCell.xib
+++ b/Resturants/Cell/TagUserCell/TagUserTCell.xib
@@ -69,7 +69,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="DWi-Fb-HLE">
-                                <rect key="frame" x="221" y="17.666666666666671" width="93" height="31"/>
+                                <rect key="frame" x="202.66666666666666" y="17.666666666666671" width="111.33333333333334" height="31"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="avu-81-mcS">
                                         <rect key="frame" x="0.0" y="0.99999999999999822" width="24" height="29.666666666666664"/>
@@ -91,6 +91,11 @@
                                                 <real key="value" value="6"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u46-3F-u2R">
+                                        <rect key="frame" x="95.000000000000028" y="0.0" width="16.333333333333329" height="31"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" image="More"/>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -118,6 +123,7 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="btnFollow" destination="9Xd-sX-Qbj" id="F6a-9a-x6T"/>
+                <outlet property="btnMore" destination="u46-3F-u2R" id="AUm-nA-2K5"/>
                 <outlet property="img" destination="lXV-7E-PRU" id="idX-dT-eyZ"/>
                 <outlet property="imgSelected" destination="avu-81-mcS" id="xtB-N2-9wG"/>
                 <outlet property="lblFollowers" destination="ZTh-vo-bED" id="fWe-4V-u73"/>
@@ -128,6 +134,7 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="More" width="16.333333969116211" height="16.333333969116211"/>
         <image name="circle.fill" catalog="system" width="128" height="123"/>
         <image name="person.circle.fill" catalog="system" width="128" height="123"/>
         <namedColor name="ColorBlack">
@@ -137,7 +144,7 @@
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="ColorYellow">
-            <color red="0.80392156862745101" green="0.86274509803921573" blue="0.22352941176470587" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.80392156862745101" green="0.86274509803921573" blue="0.22352941176470589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="tintColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
